<resources>
    <string name="app_name">ObjectPhotography</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ceramic_input">Add Ceramic Item</string>
    <string-array name="site_list_stub">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
    <string-array name="camera_list">
        <item>Tablet Camera</item>
        <item>Remote Camera</item>
    </string-array>
    <string-array name="data_structure_list">
        <item>Data Structure 1</item>
        <item>Data Structure 2</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_object_detail">Object Details</string>
    <string name="title_activity_add_change_color">AddChangeColorActivity</string>
    <string name="add_color">Add Color</string>
    <string name="change_color">Change Color</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bitmap">BitmapActivity</string>
    <string name="title_activity_ceramic_input2">CeramicInput2Activity</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="title_activity_record_weight">RecordWeightActivity</string>
    <string name="title_activity_my_wi_fi">MyWiFiActivity</string>
    <string name="title_activity_object_detail2">ObjectDetail2Activity</string>
    <string name="title_activity_image_thumbnail_test">ImageThumbnailTestActivity</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="color">Color</string>
    <string name="chroma">Chroma</string>
    <string name="lightness">Lightness</string>
    <string name="hue">Hue</string>
    <string name="location">Reading Location</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="baseURL">Web Service Base URL:</string>
    <string name="cameraIP">Camera IP:</string>
    <string name="camera_calibration">Camera Calibration Interval</string>
    <string name="select_camera">Select Camera</string>
    <string name="data_type">Data Structure Type: </string>
    <string name="take_picture">Take Picture</string>
    <string name="reconnect">Reconnect</string>
    <string name="zero">0</string>
    <string name="connection">Connection Status:</string>
    <string name="photos">Go To Photos</string>
    <string name="not_connected">Device Not Connected</string>
    <string name="view_photos">View Photos</string>
    <string name="color_correct">Color Correct</string>
    <string name="correct_color">Correct Color</string>
    <string name="add_photo">Add Photo</string>
    <string name="no_remote_camera">No Remote Camera Detected</string>
    <string name="interior_color">Interior Color</string>
    <string name="exterior_color">Exterior Color</string>
    <string name="surface">Surface Type</string>
    <string name="record_weight">Record Weight</string>
    <string name="gram"> gram</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sample"> Sample: </string>
    <string name="new_weight">New Weight (Editable):</string>
    <string name="copy_weight">Copy Weight Below</string>
    <string name="save_weight">Save Weight</string>
    <string name="weight">Weight on Scale:</string>
    <string name="tare">Tare Scale</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="P">P</string>
    <string name="nil">null</string>
    <string name="scale_reading">%d</string>
    <string name="pick_camera">Pick A Remote Camera</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="arp_ip">Fetching Ip From Arp File&#8230;</string>
    <string name="mac_connection">Connected To %s</string>
    <string name="find_peers">Discover Peers</string>
    <string name="get_ips">Get Ip Addresses</string>
    <string name="api_call">Api Call</string>
    <string name="start_live">start Live View</string>
    <string name="stop_live">Stop Live View</string>
    <string name="zoom_in">Zoom In</string>
    <string name="get_api">Get Api Commands</string>
    <string name="call_api">Call Specific Api Function</string>
    <string name="connect">Connect</string>
    <string name="localhost">http://localhost</string>
    <string name="base_url">Web Service Base URL:</string>
    <string name="manual_input">Manual Object Number Input:</string>
    <string name="current">Current Object:</string>
    <string name="site">Site:</string>
    <string name="async">Async Status</string>
    <string name="delete_photos">Delete Photo(s)</string>
    <string name = "continue_string">Continue</string>
    <string name = "sample_number">Sample Number</string>
    <string name = "context_number">Context Number</string>
    <string name = "northing">Area Northing</string>
    <string name = "easting">Area Easting</string>
    <string name = "sample_frmt">%1$s.%2$s.%3$s.</string>
    <string name = "long_frmt">%d</string>
</resources>