<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width = "match_parent"
    android:layout_height = "match_parent" android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".MainActivity"
    android:id = "@+id/main_layout">
    <TextView
        android:layout_width = "100dp"
        android:layout_height = "wrap_content"
        android:textAppearance = "?android:attr/textAppearanceMedium"
        android:id = "@+id/bt_connect_status"
        android:layout_alignTop = "@+id/textView27"
        android:layout_toEndOf = "@+id/textView27"
        android:text = "@string/not_connected"/>
    <Button
        android:text = "@string/photos"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/button19"
        android:layout_alignStart = "@+id/button19"
        android:layout_marginTop = "97dp"
        android:id = "@+id/viewPhotos"
        android:onClick = "goToPhotos"/>
    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:textAppearance = "?android:attr/textAppearanceMedium"
        android:text = "@string/connection"
        android:id = "@+id/textView27"
        android:layout_marginTop = "65dp"
        android:layout_alignParentTop = "true"
        android:layout_alignParentStart = "true"
        android:layout_marginStart = "19dp"/>
    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:inputType = "number"
        android:ems = "10"
        android:id = "@+id/weightText"
        android:layout_marginTop = "19dp"
        android:text = "@string/zero"
        android:maxLines = "1"
        android:textStyle = "bold"
        android:gravity = "end"
        android:layout_below = "@+id/bt_connect_status"
        android:layout_alignEnd = "@+id/viewPhotos"/>
    <Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/reconnect"
        android:id = "@+id/button19"
        android:onClick = "reconnectButtonAction"
        android:layout_below = "@+id/weightText"
        android:layout_alignStart = "@+id/button"
        android:layout_marginTop = "28dp"/>
    <Button
        android:text = "@string/take_picture"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "29dp"
        android:id = "@+id/button"
        android:onClick = "takePicture"
        android:layout_below = "@+id/button19"
        android:layout_alignEnd = "@+id/bt_connect_status"
        android:layout_marginEnd = "52dp"/>
</RelativeLayout>