<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width = "match_parent"
    android:layout_height = "match_parent" android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    tools:context = "objectphotography2.com.object.photography.objectphotography_app.AddChangeColorActivity">
    <TableLayout
        android:layout_width = "fill_parent"
        android:layout_height = "70dp"
        android:layout_centerVertical = "true"
        android:layout_centerHorizontal = "true"
        android:stretchColumns = "*">
        <TableRow
            android:layout_width = "fill_parent"
            android:layout_height = "fill_parent">
            <TextView
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:textAppearance = "?android:attr/textAppearanceMedium"
                android:id = "@+id/textView12"
                android:gravity = "center_vertical"
                android:text = "@string/location"/>
            <TextView
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:textAppearance = "?android:attr/textAppearanceMedium"
                android:id = "@+id/textView13"
                android:gravity = "center_vertical"
                android:text = "@string/hue"/>
            <TextView
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:textAppearance = "?android:attr/textAppearanceMedium"
                android:id = "@+id/textView14"
                android:gravity = "center_vertical"
                android:text = "@string/lightness"/>
            <TextView
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:textAppearance = "?android:attr/textAppearanceMedium"
                android:id = "@+id/textView15"
                android:gravity = "center_vertical"
                android:text = "@string/chroma"/>
            <TextView
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:textAppearance = "?android:attr/textAppearanceMedium"
                android:id = "@+id/textView16"
                android:gravity = "center_vertical"
                android:text = "@string/color"/>
        </TableRow>
        <TableRow
            android:layout_width = "fill_parent"
            android:layout_height = "fill_parent">
            <Spinner
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:id = "@+id/locationSpinner"
                android:layout_column = "0"/>
            <Spinner
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:id = "@+id/huesSpinner"
                android:layout_column = "1"/>
            <Spinner
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:id = "@+id/lightnessSpiner"
                android:layout_column = "2"/>
            <Spinner
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:id = "@+id/chromaSpinner"/>
            <TextView
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:textAppearance = "?android:attr/textAppearanceMedium"
                android:id = "@+id/colorText"
                android:layout_column = "4"
                android:gravity = "center_vertical|center_horizontal" />
        </TableRow>
    </TableLayout>
    <Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/save"
        android:id = "@+id/saveButton"
        android:layout_alignParentBottom = "true"
        android:layout_alignParentEnd = "true"
        android:minWidth = "400dp"
        android:onClick = "saveAndReturn"
        android:enabled = "false"/>
    <Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/cancel"
        android:id = "@+id/button11"
        android:layout_alignParentBottom = "true"
        android:layout_alignParentStart = "true"
        android:minWidth = "400dp"
        android:onClick = "cancelAndReturn"/>
</RelativeLayout>