<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:orientation = "vertical" android:layout_width = "match_parent"
    android:layout_height = "match_parent">
    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:weightSum = "20">
        <view
            android:layout_width = "wrap_content"
            android:layout_height = "450dp"
            class = "objectphotography2.com.object.photography.objectphotography_app.SimpleStreamSurfaceView"
            android:id = "@+id/surfaceview_liveview"
            android:layout_weight = "19"/>
        <LinearLayout
            android:orientation = "vertical"
            android:layout_width = "50dp"
            android:layout_height = "450dp"
            android:layout_gravity = "center_horizontal"
            android:weightSum = "3"
            android:layout_weight = "1">
            <Button
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/P"
                android:id = "@+id/take_photo"
                android:layout_weight = "1"/>
            <Button
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/plus"
                android:id = "@+id/zoom_in"
                android:layout_weight = "1"/>
            <Button
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/minus"
                android:id = "@+id/zoom_out"
                android:layout_weight = "1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>