<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width = "match_parent"
    android:layout_height = "match_parent" android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    tools:context = "objectphotography2.com.object.photography.objectphotography_app.CeramicInputActivity">
    <ScrollView
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:layout_above = "@+id/linearLayout">
        <RelativeLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content">
            <TextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:textAppearance = "?android:attr/textAppearanceMedium"
                android:text = "@string/site"
                android:id = "@+id/textView3"
                android:layout_marginTop = "42dp"
                android:minWidth = "400dp"
                android:layout_alignParentTop = "true"
                android:layout_alignStart = "@+id/autoObjectInput"/>
            <Spinner
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:id = "@+id/sitenameSpinner"
                android:layout_below = "@+id/textView3"
                android:layout_centerHorizontal = "true"
                android:minWidth = "400dp"
                android:entries = "@array/site_list_stub"/>
            <TextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:textAppearance = "?android:attr/textAppearanceMedium"
                android:text = "@string/current"
                android:id = "@+id/textView4"
                android:minWidth = "400dp"
                android:layout_below = "@+id/sitenameSpinner"
                android:layout_alignStart = "@+id/textView3"
                android:layout_marginTop = "34dp"/>
            <AutoCompleteTextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:id = "@+id/autoObjectInput"
                android:layout_below = "@+id/textView4"
                android:layout_centerHorizontal = "true"
                android:minWidth = "400dp"
                android:lines = "1"
                android:maxLines = "1"
                android:singleLine = "true"
                style = "@style/EditText"/>
            <RelativeLayout
                android:layout_width = "fill_parent"
                android:layout_height = "2dp"
                android:layout_below = "@+id/autoObjectInput"
                android:layout_centerHorizontal = "true"
                android:background = "#000000"
                android:layout_marginTop = "10dp"
                android:id = "@+id/hr2"/>
            <TextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:textAppearance = "?android:attr/textAppearanceMedium"
                android:text = "@string/manual_input"
                android:id = "@+id/textView8"
                android:layout_below = "@+id/hr2"
                android:layout_centerHorizontal = "true"
                android:layout_marginTop = "10dp"
                android:minWidth = "400dp"/>
            <EditText
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:id = "@+id/manuelObjectInput"
                android:layout_below = "@+id/textView8"
                android:layout_centerHorizontal = "true"
                android:minWidth = "400dp"
                android:lines = "1"
                android:maxLines = "1"
                android:inputType = "number"
                style = "@style/EditText"/>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_alignParentBottom = "true"
        android:layout_centerHorizontal = "true"
        android:weightSum = "2"
        android:id = "@+id/linearLayout">
        <Button
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/previous"
            android:id = "@+id/button4"
            android:minWidth = "400dp"
            android:onClick = "goPrevious"
            android:layout_weight = "1"/>
        <Button
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/next"
            android:id = "@+id/button3"
            android:minWidth = "400dp"
            android:onClick = "goNext"
            android:layout_weight = "1"/>
    </LinearLayout>
</RelativeLayout>